src/assets/styles/style.css
/* ... */
.navbar.light .navbar-toggler-icon.open::before {
  top: 0;
  transform: rotate(45deg);
}

.navbar.light .navbar-toggler-icon.open::after {
  bottom: 0;
  transform: rotate(-45deg);
}

/* Light/Dark Toggle Switch */
.sun-icon,
.moon-icon {
  font-size: 1.5em;
  cursor: pointer;
  transition: color 0.9s ease-in-out;
}

.theme-toggle-btn.dark {
  background-color: var(--dark);
  color: var(--white);
}

.theme-toggle-btn.light {
  background-color: var(--white);
  color: var(--dark);
}

.sun-icon.them-icon-dark,
.moon-icon.them-icon-dark {
  color: var(--white);
}

.sun-icon.theme-icon-light,
.moon-icon.theme-icon-light {
  color: var(--dark);
}

.theme-icon-wrapper {
  position: relative;
  width: 3em;
  height: 2em;
  top: 0.5em;
  cursor: pointer;
}

.theme-icon {
  position: absolute;
  transition: opacity 0.4s ease, transform 0.4s ease;
  opacity: 0;
  transform: scale(0.5);
}

.theme-icon.visible {
  opacity: 1;
  transform: scale(1);
  z-index: 2;
}

.theme-icon.hidden {
  opacity: 0;
  transform: scale(0.5);
  z-index: 1;
}

/* Landing */
.landing {
  display: flex;
  justify-content: center;
  height: 100vh;
  max-width: 1000px;
}

.landing img {
  max-width: 100%;
  height: auto;
  display: block;
}

.landing__header>h1 {
  font-size: 5rem;
  font-weight: 900;
  margin-bottom: 0.5em;
}

.landing__header>h2 {
  font-size: 2em;
  font-weight: 900;
}

.landing,
.about {
  gap: 2em;
  padding: 2em 0;
}

/* About */
.about {
  max-width: 600px;
}

.bio-desc {
  font-family: var(--poppins);
  display: flex;
  flex-direction: column;
}

.bio-desc p {
  line-height: 28px;
}

.bio-img {
  display: flex;
  justify-content: center;
}

/* Projects */
.projects {
  width: 100%;
  max-width: 800px;
}

.projects,
.resume,
.contact,
.about {
  height: auto;
  min-height: 100vh;
}

.project-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1.5em;
}

.project-card__img {
  max-width: 800px;
}

.project-card__details-container {
  max-width: 600px;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
}

.project-card__header-container {
  display: flex;
  gap: 1em;
  align-items: center;
}

.live,
.github {
  width: 75px;
}

.btn-container {
  display: flex;
  justify-content: center;
  gap: 2em;
}

.title {
  font-size: 1.25em;
  font-weight: 600;
}

.description {
  font-family: var(--poppins);
  font-size: 0.9em;
  font-weight: 400;
  line-height: 1.25;
}

.alice-carousel__prev-btn [data-area]:after,
.alice-carousel__next-btn [data-area]:after {
  font-size: 1.5em;
}

.react-tabs__tab-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.tab-panel {
  transition: opacity 1s ease-in-out;
  opacity: 0;
}

.react-tabs__tab-panel--selected {
  opacity: 1;
}

/* Resume section */
.resume__container {
  max-width: 800px;
}

.vertical-timeline-element-date {
  margin-left: 10px;
  margin-right: 10px;
}

.resume-download-button {
  display: inline-block;
  padding: 0.5rem 1rem;
  margin-top: 1rem;
  background-color: var(--white);
  color: var(--dark);
  border-radius: 4px;
  text-decoration: none;
  font-weight: bold;
  transition: background-color 0.3s ease;
}

.resume-download-button:hover {
  background-color: var(--light);
}

/* Contact section  */
.contact {
  width: 100%;
  padding: 2em 0;
  max-width: 600px;
}

.contact h2 {
  margin-bottom: 1.5em;
  font-size: 2.5em;
}

.contact form {
  width: 100%;
  max-width: 800px;

  display: flex;
  flex-direction: column;
  gap: 1em;
}

textarea {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem;
  border: 1px solid #ccc;
}

input,
textarea,
button {
  font-family: inherit;
  padding: 0.9em;
  border: none;
  border-radius: 3px;
  font-size: 1em;
  outline: none;
  transition: box-shadow 0.3s, transform 0.3s;
}

input:focus,
textarea:focus {
  box-shadow: 0 0 10px rgba(116, 123, 255, 0.5);
  transform: translateY(-3px);
}

/* Modal  */
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

.modal-content {
  background: var(--dark);
  color: var(--white);
  padding: 2rem;
  border-radius: 8px;
  width: 100%;
  max-width: 600px;
  max-height: 80vh;
  overflow-y: auto;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
  position: relative;

  transform: translateY(-100px);
  opacity: 0;
}

.modal-overlay.open .modal-content {
  transform: translateY(0);
  opacity: 1;
  animation: slideDown 0.3s ease-out forwards;
}

@keyframes slideDown {
  0% {
    transform: translateY(-100px);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.modal-close {
  position: absolute;
  top: 0.5rem;
  right: 0.75rem;
  font-size: 1.5rem;
  background: none;
  border: none;
  cursor: pointer;
}

/* Project and send buttons */
.live,
.github,
.send {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  gap: 0.5em;

  color: #ffffff;
  background-color: var(--pop-green);
  border: 3px solid var(--light);
  border-radius: 5px;
  cursor: pointer;
  width: 100%;

  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
}

.top-to-btm {
  position: relative;
}

.icon-position {
  position: fixed;
  bottom: 40px;
  right: 25px;
  z-index: 20;
}

.icon-style {
  background-color: var(--pop-green);
  border: 2px solid #fff;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  color: #fff;
  cursor: pointer;
}

.icon-style:hover {
  animation: none;
  background: #fff;
  color: var(--pop-green);
  border: 2px solid var(--pop-green);
}

.icon-style.light {
  border: 2px solid var(--footer-dark);
}

.icon-style.light:hover {
  animation: none;
  background: var(--footer-dark);
  color: var(--pop-green);
  border: 2px solid var(--pop-green);
}
/* ... */

